--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "eslint-config-airbnb": "^18.2.0",
@@ -19,8 +21,10 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4",
     "react": "^16.13.1",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-intl-currency-input": "^0.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.6",
